--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script>
 			document.documentElement.className = 'js';
 	</script>
-<!--dette gjør at becuase javascript can fail, if the server is running javascript, call html for js. skjønte ikke helt... -->
+<!--dette gjør at becuase javascript can fail, if the server is running javascript, call html for js. skjønte ikke helt... dette gjør at you wont see a flash of hidden content before it disappears -->
 
 			<!-- info about the page -->
 			<title>Nora Frydenberg 😬 </title>
@@ -69,7 +69,7 @@
 		 </div class="main">
 
 
-		 <script src="http://code.jquery.com/jquery.js"></script>
+		 <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		 <script src="js/main.js"></script>
  
 
